fixed img on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,7 +106,7 @@ footer a {
 		padding: 5px;
 	}
 	img {
-		width: 80%px;
+		width: 80%;
 		padding: 5px;
 	}
 	
@@ -132,7 +132,7 @@ footer a {
 		padding: 5px;
 	}
 	img {
-		width: 80%px;
+		width: 80%;
 		padding: 5px;
 	}
 	
